[project]
name = "pytoolkit-async-worker"
version = "v2025.07.18.01"
description = "Result型による例外安全な非同期タスクワーカーライブラリ"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = ["pytoolkit-rustlike"]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"

[tool.pyright]
include = ["pytoolkit_async_worker", "tests"]
typeCheckingMode = "strict"

[tool.uv.sources]
pytoolkit-rustlike = { git = "https://github.com/a24fukuda/pytoolkit-rustlike.git", rev = "v2025.07.16.02" }
